# mongo-c-orchestration-demo

./: CMakeLists.txt  README.md  mongo-c-orchestration-demo.c  mongos-restarted.json  primary-restarted.json
